// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Link CustomStyles smoke-test 1`] = `
<div style="margin: 0px auto; max-width: 600px;">
  <table cellpadding="0"
         cellspacing="0"
         role="presentation"
         style="border: 0px; vertical-align: top; width: 100%;"
  >
    <tbody>
      <tr>
        <td align="center"
            style="vertical-align: top;"
        >
          <h2>
            Please
            <a href="https://github.com/leopardslab/react-email"
               target="_blank"
               style="color: red; text-decoration: underline;"
            >
              Click here
            </a>
            to access
          </h2>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/Link Default smoke-test 1`] = `
<div style="margin: 0px auto; max-width: 600px;">
  <table cellpadding="0"
         cellspacing="0"
         role="presentation"
         style="border: 0px; vertical-align: top; width: 100%;"
  >
    <tbody>
      <tr>
        <td align="center"
            style="vertical-align: top;"
        >
          <h2>
            Please
            <a href="https://github.com/leopardslab/react-email"
               target="_blank"
               style="color: rgb(0, 0, 238); text-decoration: none;"
            >
              Click here
            </a>
            to access
          </h2>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
